--- a/.github/workflows/m3u-hn.yml
+++ b/.github/workflows/m3u-hn.yml
@@ -27,8 +27,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --local user.email "your-email@example.com"
-        git config --local user.name "your-username"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git add ipv6-hn.m3u
         git commit -m "Daily update of ipv6-hn.m3u"
         git push
