--- a/.github/workflows/m3u-hn.yml
+++ b/.github/workflows/m3u-hn.yml
@@ -26,6 +26,7 @@ jobs:
         mv temp-ipv6.m3u ipv6-hn.m3u
 
     - name: Check for modifications
+      id: check_modifications
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
